[project]
name = "advent-of-code-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pytest",
    "typer>=0.14.0",
    "attrs>=24.2.0",
    "black>=24.10.0",
]
optional-dependencies = { }
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
