[project]
name = "advent-of-code-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pytest",
    "typer>=0.14.0",
    "attrs>=24.2.0",
    "black>=24.10.0",
    "types-requests>=2.32.0.20241016",
    "types-attrs>=19.1.0",
    "numba==0.60.0",
    "numpy>=2.0.2",
]
optional-dependencies = { }
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
]
